# attack_to_veris

./: .gitignore  ATT&CK-VERIS Backhaul.json  ATT&CK-VERIS mapping.xlsx  CONTRIBUTING.md  Makefile  README.md  attack_veris_mappings.json  attack_veris_reverse.json  guiding_principles.md  hacking_malware_varieties.json  hacking_malware_vectors.json  make.py  mapping_methodology.md  methodology.md  pyproject.toml  requirements.txt  tox.ini  use-cases.md  veris-mappings.json  veris_enumerations.json
.github/workflows/: build.yml  ci-tests.yml  test.yml
docs/: README.md  STIX_format.md  conf.py  guiding_principles.md  index.rst  mappings.rst  methodology.md  methodology.rst  overview.rst  scenarios.rst  tooling.md  use-cases.md  use-cases.rst  use_cases.rst  visualization.md
docs-old/: methodology.md  visualization.md
frameworks/veris/: README.md  attack_veris_mappings.json  parse.py  parse_mappings.py  parse_veris.py  veris-2-mappings-Enterprise-MASTER.xlsx  veris-2-mappings-Groups.xlsx  veris-list-mappings.xlsx  veris-mappings.json  veris-mappings.xlsx
frameworks/veris/input/: README.md  (+4 more)
mappings/veris-1.3.5/: README.md  veris-mappings.xlsx
requirements/: requirements.txt  test-requirements.txt
resources/: README.md  mappings_validator.py
src/: README.md  append_mappings.py  create_mappings.py  list_mappings.py  make.py  mappings_to_heatmaps.py  mappings_validator.py
src/parse/: README.md  parse.py  parse_veris.py
src/stix/: README.md  parse.py  parse_mappings.py  parse_veris.py
src/util/: README.md  create_mappings.py  generate_docs.py  groups_navigator_layers.py  make.py  mappings_to_heatmaps.py
src/veris/: README.md
src/veris_diff/: README.md  diff_veris.py
tests/: test_mapping_entries.py  test_scripts.py  test_spreadsheet_mappings.py
tests/fixtures/: config.json  create_mappings_output.csv  create_mappings_output.json  test_spreadsheet_1.xlsx
util/: README.md  create_mappings.py  mappings_to_heatmaps.py  mappings_validator.py
(+733 files in other folders)
