[tool.poetry]
name = "veris"
version = "2.0.0"
description = ""
authors = ["Center for Threat-Informed Defense <ctid@mitre-engenuity.org>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
sphinx = "4.5.0"
sphinx-autobuild = "2021.3.14"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
