[tool.poetry]
name = "veris"
version = "2.0.0"
description = ""
authors = ["Center for Threat-Informed Defense <ctid@mitre-engenuity.org>"]
packages = [
    { include = "veris", from = "src" },
]
license = "Apache"

[tool.poetry.scripts]
veris_make = "veris.util.make:main"
veris_docs = "veris.util.generate_docs:main"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.3"
requests = "^2.28.2"
stix2 = "^3.0.1"
tqdm = "^4.64.1"
colorama = "^0.4.6"
jsonschema = "^4.17.3"
pathlib = "^1.0.1"
pytest = "^7.2.1"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
sphinx = "4.5.0"
sphinx-autobuild = "2021.3.14"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
